@@ -1,3 +1,10 @@
+Tue Jul 18 19:07:02 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/Creator.pm:
+
+          Do not perform slash conversion on the 'prebuild' and 'postbuild'
+          settings.
+
 Tue Jul 18 14:38:01 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/AutomakeWorkspaceCreator.pm:
